--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
         }
     }
 
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
     dataBinding{
         enabled = true
     }
@@ -43,6 +47,9 @@ dependencies {
 
     // Material
     implementation 'com.google.android.material:material:1.2.1'
+
+    // android ktx
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
 
 
     // Room
