--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,14 @@ android {
         jvmTarget = '1.8'
     }
 
-    dataBinding{
-        enabled = true
+    buildFeatures{
+        dataBinding true
+        viewBinding true
     }
+}
 
+repositories {
+    maven { url "https://www.jitpack.io" }
 }
 
 dependencies {
@@ -41,6 +45,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    // viewbinding ktx
+    implementation 'com.github.wada811:ViewBinding-ktx:1.1.1'
 
     // livedata ktx
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
