--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,17 +77,11 @@ dependencies {
     implementation "androidx.room:room-ktx:2.3.0-alpha01"
 
     // Dagger-hilt
-//    implementation "com.google.dagger:hilt-android:2.28-alpha"
-//    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
-//    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
-//    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
-//    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
-    implementation "com.google.dagger:hilt-android:2.29.1-alpha"
-    implementation "androidx.hilt:hilt-common:1.0.0-alpha01"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01"
-    kapt "com.google.dagger:hilt-compiler:2.29.1-alpha"
-    kapt "androidx.hilt:hilt-compiler:1.0.0-alpha01"
-    kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
+    annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
