migrate to groupie

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,10 @@ dependencies {
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
     annotationProcessor 'androidx.hilt:hilt-compiler:1.0.0-alpha01'
 
+    // Groupie
+    implementation "com.xwray:groupie:2.9.0"
+    implementation "com.xwray:groupie-viewbinding:2.9.0"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
