--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,10 @@ dependencies {
     // Expandable Bottom Bar
     implementation 'com.github.st235:expandablebottombar:1.3.0'
 
+    // Paging3
+    implementation "androidx.paging:paging-runtime:3.0.0-rc01"
+    testImplementation "androidx.paging:paging-common:3.0.0-rc01"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
