--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,5 +94,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // truth
+    testImplementation "com.google.truth:truth:1.1.3"
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.1.0'
+
 }
 
