--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,5 +99,6 @@ dependencies {
 
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.1.0'
 
+    testImplementation "android.arch.core:core-testing:2.1.0"
 }
 
